# Hades-Windows

./: .gitignore  README.md  hadesview.sdf  hadesview.sln  hadesview.sln.bak  win_kernel_event.md  win_user_event.md  windows struct_c.md
Documentation/: Etw_Event_Struct.md  HDF.md  HadesAgentWinTest_ExportProto.go  HboatCommand.md  HpSocket_vs2019_build.md  Protobuf_vs2019_build.md  Win_Kernel_Event.md  Win_User_Event.md  Win_Wfp_Event.md  Windows Struct_c.md  agent_win_unit_test_pb.go  etw_event_struct.md  grpc_format1.txt  win_sysinfo_base.txt  win_user_event.md  windows_Ipc_protocol.md  windows_att&ck.md
DuiLib/: DuiLib.vcxproj  DuiLib.vcxproj.filters
Example/: net_nf_readme.md
HadSvc/: AnonymousPipe.cpp  AnonymousPipe.h  CodeTool.cpp  CodeTool.h  DataHandler.cpp  DataHandler.h  FileDetailReader.cpp  FileDetailReader.h  HlprMiniCom.cpp  HlprMiniCom.h  NamedPipe.cpp  NamedPipe.h  eventQueue.h  grpc.cpp  grpc.h  hades_win.grpc.pb.cc  hades_win.grpc.pb.h  hades_win.pb.cc  hades_win.pb.h  kinterface.h  kmsginterface.cpp  kmsginterface.h  knetwork.cpp  knetwork.h  main.cpp  mcfilter.aps  mcfilter.cpp  mcfilter.rc  mcfilter.vcxproj  mcfilter.vcxproj.filters  msgassist.cpp  msgassist.h  msgloop.cpp  msgloop.h  packages.config  pipe.cpp  pipe.h  pipeManage.cpp  pipeManage.h  protobuf.h  (+11 more)
HadesContrl/: DriverManager.cpp  HpTcpSvc.h  (+27 more)
com/netCom/: Cargo.toml
com/netCom/config/: directoryRuleConfig.json  processRuleConfig.json
com/netCom/src/: drvmg.rs  drvmglib.rs  handle.rs  handlelib.rs  lib.rs  rule.rs  rulelib.rs
com/netCom/tests/: rule.rs  tsDrvmg.rs  tsRule.rs
(+765 files in other folders)
